--- a/styles/components/HeroSection.module.scss
+++ b/styles/components/HeroSection.module.scss
@@ -17,12 +17,12 @@
     max-width: 144rem;
     margin: 0 auto;
 
-    @include media('>mindesk') {
+    @include media('>=mindesk') {
       padding: 0 4rem;
     }
 
     & .mainContainer {
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-around;
@@ -44,7 +44,7 @@
         font-size: 4rem;
       }
 
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         font-size: $fnt-x-large;
         text-align: left;
       }
@@ -63,7 +63,7 @@
         font-size: 1.7rem;
       }
 
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         font-size: $fnt-medium;
         text-align: left;
         margin: 2rem 0;
@@ -77,7 +77,7 @@
       justify-content: center;
       align-items: center;
 
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         flex-flow: row nowrap;
         justify-content: flex-start;
       }
@@ -91,17 +91,25 @@
         width: 35rem;
       }
 
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         margin: 0;
         width: min(40vw, 48rem);
       }
     }
 
     & .detailsContainer {
-      display: flex;
-      flex-flow: column nowrap;
-      align-items: center;
+      width: max-content;
+      margin: 0 auto;
       padding-bottom: 5rem;
+
+      @include media('>=mindesk') {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        width: 100%;
+        justify-content: space-evenly;
+      }
+
       & .details {
         display: flex;
         align-items: center;
@@ -110,7 +118,12 @@
         & h2 {
           color: #2b7ce2;
           font-size: 3rem;
-          @include media('>mindesk') {
+          width: 10.1rem;
+
+          @include media('>=mindesk') {
+            width: unset;
+          }
+          @include media('>=mindesk') {
             font-size: $fnt-large;
           }
         }
@@ -124,7 +137,7 @@
           font-weight: 500;
           margin-left: 1.5rem;
 
-          @include media('>mindesk') {
+          @include media('>=mindesk') {
             font-size: $fnt-semi-medium;
           }
         }
@@ -134,7 +147,7 @@
         margin: 0;
       }
 
-      @include media('>mindesk') {
+      @include media('>=mindesk') {
         flex-flow: row nowrap;
         justify-content: space-around;
         align-items: center;
